flowcontroller/yamls/networkpolicy-allow-processor-to-kafka-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-processor-to-kafka-egress
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Egress
  podSelector: 
    matchLabels:
      app: processor
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: kafka
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
    ports:
    - protocol: TCP
      port: 9092
